src/components/App.css
/* ... */
.active-filter.exclu { border:1px solid rgba(229, 74, 53,0.65); text-decoration:line-through;text-decoration-color:rgba(229, 74, 53,1); }
.active-filter.exclu span b span { text-decoration:line-through;text-decoration-color:rgba(229, 74, 53,1); }

.active-filter > span b span { max-width:350px;text-overflow: ellipsis;overflow: hidden; white-space: nowrap; display: block; }

/* .active-filter > span > span:first-child { display:none; } */

.active-filter:first-child > a:last-child { opacity:0.5; pointer-events: none;  }

.active-filter { font-size:0; box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); border-radius: 2px;background:white; height:28px;line-height:28px;}
.active-filter,#clear-filters  {  margin-bottom:10px;  }

.active-filter b span { color: #152631; font-size:11px; font-weight:700; padding-left:2px;}
/* .active-filter > span > b { margin-left:10px;} */

#filters-UI { padding-bottom:0px; text-align:left; background-color: #fce08e; margin-top:-5px; height:auto;}
#filters-UI > div {  width:700px; min-height:30px; overflow:hidden; /*white-space: nowrap; position:absolute; */ max-height:120px; height:auto;
   padding-bottom:15px;
}

#filters-UI #clear-filters { vertical-align:-2px; }
#filters-UI #clear-filters > span { font-size:11px; font-weight:600;color:#4a4a4a; vertical-align: 8px; padding-right:5px; }

.SearchPane:not(.resultPage) #filters-UI { display:none; }

#suggestions { position:absolute; z-index:100001; width:100%;box-shadow: 0 -2px 4px rgba(187, 187, 187, 0.5),0 2px 4px rgba(187, 187, 187, 0.5);}

#menu-datatype > div:last-child { box-shadow: 0 -2px 4px rgba(187, 187, 187, 0.5);}

.SearchPane .formControl { font-size:14px; font-weight:500; }

#menu-datatype > div:last-child ul li,
#suggestions li { padding:12px 16px; font-size:14px; color: #4c4c4c; font-weight:600; }

#menu-datatype > div:last-child ul li:hover,
#suggestions li:hover {  background-color:#f5f5f5; }

#suggestions .lang { text-transform: uppercase; color:#d73449; font-weight:700; font-size:10px; align-items:baseline; top:0px;}

#search-bar button { opacity:1;}

/*
#suggestions { z-index:10000; } 
*/
/* --------------------------------------------------------------------------------------------------------------------- topbar */

.nav { width:100%; height:80px; position:fixed;top:0;left:0;background:white; display:flex;align-items: center; justify-content: center;
   box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); z-index:10010;
}

.nav #back,.nav #back h2 span { 
   font-size: 14px;
   font-weight: 700;
   line-height: 20px;
   color: #152631;
}
.nav #back > * { vertical-align:middle;}
.nav #back {  max-width:calc(100% - 300px); display: flex;  align-items: center; justify-content: flex-end;}
.nav #back span { margin-left:auto; }
.nav #back > span:first-child { padding-right:10px; } 
.nav #back a { cursor: pointer; flex-shrink:0;}
.nav #back h2::before { content:' '; border-left:2px solid  #152631; margin:0 10px; height:12px;width:2px; display:inline-block; vertical-align:-1px; }
.nav #back h2 .T { display:none; }
.nav #back h2.on { font-size:18px;}
.nav #back h2.on, .nav #back h2 span { color:#d73449; }
.nav #back h2.on > *,.nav #back h2.on::before { vertical-align: middle;}
.nav #back h2 .lang { display:none; }

.nav #back > span:last-child { display:inline-block;   max-width:60vw; margin-left:0;   white-space: pre;   }
.nav #back h2 {    overflow: hidden; margin:0; display:inline-block; } 
.nav #back h2 span { overflow: hidden; text-overflow: ellipsis; max-width:calc(60vw - 70px); display:inline-block;} 

#etext-nav > div,
.nav > div { width:1222px; display:flex;justify-content: space-between;align-items:center; }
/* .nav > div > a > img { height:50px; } */

.nav > div > div > a > img { vertical-align: middle;}

.nav #logo { display:flex; align-items:center;}

.nav #logo a { display: inline-block; margin-right:20px; }
.nav #logo a:first-child span { font-size:24px; font-weight:500;}

.nav a { text-decoration: none; font-size:0; display:inline-block; }

.nav a#about,
.nav a > span,
.nav #donate, 
.nav #login { font-weight:700; font-size:14px;letter-spacing: 0.29px; text-transform: uppercase; text-decoration: none; }


.nav a#about { color: hsl(206, 24%, 13%);}

#login { top:0;right:0;z-index:1; display:inline-block; margin-left:auto;  color:#d73449; }
#login button {color:rgba(0,0,0,0.54); }

.nav #logo + a { margin-left:150px; }
/* .nav #about  { margin-left:105px; margin-right:105px;  } */

.nav a > span { color:#192229; display:inline-block;   }

#login span { display:inline-block; margin-left:20px; cursor:pointer; }

.nav #donate { width:150px;height:50px;border-radius: 2px; color:white;background-color: #d73449; line-height:50px; 
   text-align:center; display:inline-block;  margin-left:35px; }
.nav #donate img { vertical-align: middle; display: inline-block; margin-right:10px;}

.nav #lang { cursor:pointer; margin-top:7px; margin-left:50px; display: inline-block;}
.nav #lang img { display: inline-block;  } 

/* .resource .title + .data + .data .browse { display:none; } */
.nav .history { margin-left:35px; display:flex;}
.nav .history span { background-color:#efedee; width:40px;height:40px;border-radius:20px; display:inline-flex;justify-content: center;margin-left:15px;
   padding-left:2px; box-sizing: border-box; 
}
.nav .history span img { opacity:0.5; }


/* ---------------------------------------------------------------------------------------------------------------------- "sidepanes" */


.SidePane > div { padding-bottom:50px; }
.SidePane > div > ul { align-items: center; }
.SidePane > .close { position:absolute; top:-6px;right:-6px;}
.SidePane > .hide { position:absolute; top:-6px;left:-6px;}
.SidePane > #annoCollec { position:absolute; top:-6px;left:40px;}
.SidePane > #annoCollec svg.score0 { border-radius:50%; background-color:rgba(255, 205, 3, 0.4);border:1px dashed rgba(167, 134, 1, 0.4);}
/* ... */

